# opengit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  api.ts  demo.ts  main.tsx  repositoryManagement.test.ts  repositoryManagement.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/site/: package.json  tsconfig.tsbuildinfo
apps/site/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  export-detail.json  prerender-manifest.json  required-server-files.json  trace
apps/site/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
apps/site/.next/cache/webpack/client-production/: 1.pack  2.pack  3.pack  (+5 more)
apps/site/.next/server/: middleware-build-manifest.js  server-reference-manifest.json
apps/site/.next/server/app/: _not-found.html  _not-found.rsc  index.html  page.js  page_client-reference-manifest.js
apps/site/.next/server/chunks/: 997.js
apps/site/.next/server/pages/: 500.html
apps/site/.next/static/chunks/: main-app-fe57e2ec422e523d.js
apps/site/.next/types/app/: layout.ts  page.ts
apps/site/app/: globals.css  layout.tsx  page.tsx
apps/site/app/thanks/: page.tsx
docs/: architecture.md  product-brief.md  release-checklist.md  signing-and-updates.md  threat-model.md
(+9 files in other folders)
