[package]
name = "opengit-desktop"
version = "0.1.0"
description = "OpenGit desktop backend"
authors = ["OpenGit"]
edition = "2021"

[lib]
name = "opengit_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.5", features = [] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["process", "rt-multi-thread", "macros"] }
